--- a/pom.xml
+++ b/pom.xml
@@ -49,13 +49,13 @@
         <repository>
             <id>nexus-snapshots</id>
             <!--url>http://192.168.133.136:8081/repository/maven-releases/</url-->
-            <url>http://localhost:48001/repository/maven-releases/</url>
+            <url>http://local.nexus:48001/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
             <name>Nexus snapshots</name>
             <!--url>http://192.168.133.136:8081/repository/maven-snapshots/</url-->
-            <url>http://localhost:48001/repository/maven-snapshots/</url>
+            <url>http://local.nexus:48001/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -90,7 +90,7 @@
                 <configuration>
                     <serverId>nexus-snapshots</serverId>
                     <!--nexusUrl>http://192.168.133.136:8081/nexus/</nexusUrl-->
-                    <nexusUrl>http://localhost:48001/nexus/</nexusUrl>
+                    <nexusUrl>http://local.nexus:48001/nexus/</nexusUrl>
                     <skipStaging>true</skipStaging>
                 </configuration>
             </plugin>
