--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.softtek</groupId>
     <artifactId>ws-poc_ci-cd</artifactId>
-    <version>0.1.2</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
     
     <name>ws-poc_ci-cd</name>
@@ -48,13 +48,11 @@
     <distributionManagement>
         <repository>
             <id>nexus-snapshots</id>
-            <!--url>http://192.168.133.136:8081/repository/maven-releases/</url-->
             <url>http://local.nexus:48001/repository/maven-releases/</url>
         </repository>
         <snapshotRepository>
             <id>nexus-snapshots</id>
             <name>Nexus snapshots</name>
-            <!--url>http://192.168.133.136:8081/repository/maven-snapshots/</url-->
             <url>http://local.nexus:48001/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
@@ -89,7 +87,6 @@
                 </executions>
                 <configuration>
                     <serverId>nexus-snapshots</serverId>
-                    <!--nexusUrl>http://192.168.133.136:8081/nexus/</nexusUrl-->
                     <nexusUrl>http://local.nexus:48001/nexus/</nexusUrl>
                     <skipStaging>true</skipStaging>
                 </configuration>
